added new link to fix GPM login

--- a/Spotify_To_GPM/spotify_to_gpm_site/spotify_to_gpm_app/templates/spotify_to_gpm_app/login_page.html
+++ b/Spotify_To_GPM/spotify_to_gpm_site/spotify_to_gpm_app/templates/spotify_to_gpm_app/login_page.html
@@ -35,9 +35,10 @@
             <a href="https://myaccount.google.com/signinoptions/two-step-verification/enroll-welcome"
                target="_blank">turn on 2-Step Verification,</a>
             then <a href="https://support.google.com/mail/answer/185833?hl=en"
-                    target="_blank">create an App Password.</a>
-            Once completed please sign into this form with your Google email and your newly created
-            App Password.
+                    target="_blank">generate an App Password.</a>
+            Next, go to <a href="https://accounts.google.com/b/0/DisplayUnlockCaptcha" target="_blank">this link</a>
+            and follow the instructions. After completion, login with your email
+            and your newly created App Password.
         </span>
 
         {{ failed }}
